# GenesisBench

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  task-proposal.yml
.github/workflows/: ci.yml
containers/ant_v1/: Dockerfile
containers/simulation_heuristics_ant_v1/: Dockerfile
docs/: ant-v1-task-design.md  article-suite-scoring.md  article-suite-timeout-fairness.md  learning-beyond-gradients-suite.md  reward-integrity.md  simulation-heuristics-ant-v1-task-design.md
experiments/ant_v1/: README.md  models.toml
experiments/article_suite/: README.md  models.toml  protocol.toml
experiments/simulation_heuristics_ant_v1/: README.md
leaderboard/: ARTICLE_SUITE.md  README.md  REPORT.md  ant_v1.json  article_suite.json  article_suite_timeout_fairness_audit.json  simulation_heuristics_ant_v1.json
scripts/: __init__.py  audit_ant_leaderboard.py  audit_article_suite_timeout_fairness.py  audit_simulation_heuristics_ant_v1_leaderboard.py  bench_opencode.py  build_ant_runner_image.sh  build_article_suite_leaderboard.py  build_leaderboard.py  build_simulation_heuristics_ant_v1_runner_image.sh  create_task.py  plot_ant_leaderboard.py  plot_article_suite_leaderboards.py  plot_simulation_heuristics_ant_v1_leaderboard.py  prepare_task.py  run_ant_experiment.py  run_article_suite.py  run_openhands_agent.py  run_simulation_heuristics_ant_v1_experiment.py  sync_frontierphysics_hardening.py  validate_tasks.py
security/: restrict_exec.c
src/genesisbench/: __init__.py  ant.py  atari57.py  breakout.py  cli.py  halfcheetah.py  integrity.py  montezuma.py  policy_isolation.py  pong.py  task_document.py  vizdoom.py
tasks/: README.md
tasks/_template/: README.md  benchmark.txt  evaluate.py  prompt.md  task.md  task.toml
tasks/ant_v1/: README.md  benchmark.txt  prompt.md  task.toml
tasks/simulation_heuristics_ant_v1/: README.md  evaluate.py  task.md
tasks/simulation_heuristics_atari57_v1/: README.md  evaluate.py  task.md
tasks/simulation_heuristics_breakout_ram_v1/: README.md  evaluate.py  task.md
tasks/simulation_heuristics_breakout_rgb_v1/: README.md  evaluate.py  task.md
tasks/simulation_heuristics_halfcheetah_v1/: README.md  evaluate.py  task.md
tasks/simulation_heuristics_montezuma_v1/: README.md  evaluate.py  task.md
tasks/simulation_heuristics_pong_ram_v1/: README.md  evaluate.py  task.md
tasks/simulation_heuristics_vizdoom_d1_v1/: README.md  evaluate.py  task.md
tests/: test_ant.py  test_article_suite_tooling.py  test_integrity.py  test_leaderboard_artifacts.py  test_policy_module_loading.py  test_simulation_heuristics_ant_v1.py  test_simulation_heuristics_atari57_v1.py  test_simulation_heuristics_breakout_v1.py  test_simulation_heuristics_halfcheetah_v1.py  test_simulation_heuristics_montezuma_v1.py  test_simulation_heuristics_pong_ram_v1.py  test_simulation_heuristics_vizdoom_v1.py  test_task_tooling.py
website/: README.md  index.html
(+591 files in other folders)
